Fix .buttons-unit width. Align buttons to center (#164)

--- a/site/_css/index.less
+++ b/site/_css/index.less
@@ -174,7 +174,8 @@ body.index {
 
     .buttons-unit {
       animation: fade 1.1s 3.2s ease-in-out both;
-
+      width: 100%;
+      
       @media screen and (min-width: 1020px) {
         position: absolute;
         top: ~"calc(75%)";
